--- a/Css/upas.css
+++ b/Css/upas.css
@@ -12,11 +12,12 @@ html {
     }
     
     .login-box {
+    text-align: left;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
-    width: 400px;
-    padding: 40px;
+    width: 1000px;
+    padding: 80px;
     transform: translate(-50%, -50%);   
     background: rgba(0,0,0,.5);
     box-sizing: border-box;
@@ -28,7 +29,7 @@ html {
     margin: 0 0 30px;
     padding: 0;
     color: #fff;
-    text-align: center;
+    text-align: left;
     }
 
     .login-box .user-box {
@@ -36,17 +37,17 @@ html {
     }
     
    
-    .login-box .user-box input {
-        width: 100%;
-        padding: 10px 0;
-        font-size: 16px;
-        color: #fff;
-        margin-bottom: 30px;
-        border: none;
-        border-bottom: 1px solid #fff;
-        outline: none;
-        background: transparent;
-        }
+ .login-box .user-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
+    }
     
     .login-box .user-box label {
     position: absolute;
@@ -70,25 +71,26 @@ html {
     .login-box form a {
     position: relative;
     display: inline-block;
-    padding: 10px 20px;
-    color: #03e9f4;
+    padding: 20px 7px;
+    color: #f40303;
     font-size: 16px;
     text-decoration: none; 
     text-transform: uppercase; 
     overflow: hidden;  
     transition: .5s;   
-    margin-top: 40px;  
+    margin-top: 50px;  
     letter-spacing: 4px   
     }
     
     .login-box a:hover { 
-    background: #03e9f4;  
+    background: #f40303;  
     color: #fff;  
     border-radius: 5px;  
-    box-shadow: 0 0 5px #03e9f4, 
-    0 0 25px #03e9f4, 
-    0 0 50px #03e9f4,
-    0 0 100px #03e9f4; 
+    box-shadow: 0 0 5px #f40303, 
+    0 0 25px #f45703, 
+    0 0 50px #f49003,
+    0 0 100px #f41b03; 
+    
     }
 
     .login-box a span {  
@@ -101,7 +103,7 @@ html {
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #03e9f4);
+    background: linear-gradient(90deg, transparent, #f40303);
     animation: btn-anim1 1s linear infinite;
     }
     
@@ -119,7 +121,7 @@ html {
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #03e9f4);
+    background: linear-gradient(180deg, transparent, #f40303);
     animation: btn-anim2 1s linear infinite;
     animation-delay: .25s
     }
@@ -138,7 +140,7 @@ html {
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #03e9f4);
+    background: linear-gradient(270deg, transparent, #f40303);
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
     }
@@ -156,7 +158,7 @@ html {
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #03e9f4);
+    background: linear-gradient(360deg, transparent, #f40303);
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
     }
@@ -216,4 +218,22 @@ html {
     .menu {
         display: flex;
     }
+}
+img {
+    width: 500px;
+    height: 300px;
+    margin: 5px;
+    padding: 5px;
+    display: block;
+    float: right;
+}
+
+h4 a {
+    color: #03e9f4;
+    text-decoration: none;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    margin: 0;
+
 }
